# heimdall

./: .env  .gitignore  compose.yml
.gitea/workflows/: build-shared.yml  build-squads.yml  build-subscriptions.yml
infra/: compose.yml
infra/kong/: kong.yml
infra/watchtower/: config.json
services/squad/: Containerfile  README.md  requirements.txt
services/squad/scripts/: start.sh
services/squad/src/: controller.py  model.py  service.py
services/squads/: Containerfile  requirements.txt
services/squads/src/: controller.py  event_handler.py  main.py  model.py  service.py
services/subscriptions/: Containerfile  README.md  subscription_list_repository.py
services/subscriptions/src/: controller.py  event_handler.py  main.py  model.py  repository.py  service.py
shared/: README.md  pyproject.toml  requirements.txt  setup.py
shared/lib/: base_repository.py  database.py
shared/modi/: deps.py
shared/modi/config/: settings.py
shared/modi/core/: base_model.py  base_repository.py  base_service.py
shared/modi/core/database/: connection.py
shared/modi/redis/: connection_manager.py
shared/shared/: deps.py
shared/shared/config/: settings.py
shared/shared/core/: base_model.py  base_repository.py  base_service.py
shared/shared/core/database/: connection.py
squad/: Containerfile  requirements.txt
squad/src/: controller.py  main.py  model.py  repository.py
subscription/: subscription_controller.py  subscription_model.py  subscription_repository.py  subscription_service.py
