[build-system]
requires = ["setuptools>=61.0", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "modi"
version = "0.1.0"
authors = [
    { name="David Ramirez", email="david.ramirez@archi.com" }
]
description = "Shared library for Heimdall services"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]
dependencies = [
    "boto3>=1.35.59",
    "pydantic_settings>=2.1.1"
]

[tool.setuptools]
packages = [
    "modi",
    "modi.core",
    "modi.config"
]
